--- a/website.html
+++ b/website.html
@@ -11,7 +11,7 @@
     <span class="links"> <a href="website.html">Home</a> </span>
     <span class="links"> <a href="aboutme.html">About Me</a></span>
     <span class="links"> <a href=""> Academics and Extracuricualars</a></span>
-    <h1>Mori Schacter</h1>
+    <h1>Mori Schacter website</h1>
     <hr>
        <div>
         <h2>Overview</h2>
