--- a/newfeature.html
+++ b/newfeature.html
@@ -6,15 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-<<<<<<< Updated upstream
-    mom is collaborating
-<<<<<<< Updated upstream
-    really is she
-=======
-    mom is collaborating really
->>>>>>> Stashed changes
-=======
-    added more
->>>>>>> Stashed changes
+one version 
 </body>
 </html>
