--- a/academics.html
+++ b/academics.html
@@ -10,7 +10,7 @@
         Academics
     </h2>
     <p>
-       Previous Courses and Projects at Emory
+       Previous Courses and Projects at Emory univeristy
     </p>
     <li>CS 171(OOP)</li>
     <li>CS 170</li>
