--- a/features.html
+++ b/features.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    working for this new feature of course
+    working for this new feature of course, you need to changen 
     
 </body>
 </html>
