--- a/features.html
+++ b/features.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     working for this new feature of course, you need to changen 
+    please help me with this
     
 </body>
 </html>
