--- a/features.html
+++ b/features.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     working for this new feature of course, you need to changen 
-    please help me with this
+    please help
     no sir please dix 
     dddnnn
     blurrrr
